# legendsof1f600

./: .env  .gitignore  .htaccess  Cargo.toml  README.md  hello  legendsof1f600.py  map  map.yaml  pylib_test.py
assets/: index.html
src/: legendsof1f600.py  lib.rs  main.rs  world.rs
src/legends_server/: .htaccess  README.md  index.cgi  legends_app.py
