[package]
authors = ["Nathan Jent <nathanjent@gmail.com>"]
name = "legendsof1f600"
version = "0.1.0"

[[bin]]
name = "legendsof1f600"

[dependencies]
chrono = "0.2.0"
dotenv = "0.8.0"
envy = "0.2.0"
mysql = "10.0.0"
rouille = "1.0.1"
rustc-serialize = "0.3.23"
serde = "0.9.11"
serde_derive = "0.9.11"
specs = "0.7.0"
yaml-rust = "0.3.4"
